fixed bug report url

--- a/re-gui.html
+++ b/re-gui.html
@@ -205,7 +205,7 @@
                     <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>!</li>
                     <li>Bugs found are 
                     <a href="https://profiles.google.com/srikumarks">my own</a> :P (report 
-                    <a href="http://nishabdam.com:8080/bol/reportlist">here</a>).</li>
+                    <a href="https://github.com/srikumarks/rhythm-engine">here</a>).</li>
                     <li>Works only in <a href="http://www.google.com/chrome">Chrome</a>.</li>
                 </ul>
                 <div class="row">
